# cpp_exercise

./: .gitignore  CMakeLists.txt  README.md
control/: CMakeLists.txt
control/src/: PID.cpp
plt_example/: CMakeLists.txt  basic.cpp  minimal.cpp
plt_example/src/: animation.cpp  sin.cpp  subplot.cpp
robotics/: 2d_arm_trajectory.cpp  CMakeLists.txt  pendulum_dynamics2.cpp
robotics/src/: 2d_arm_fk_and_ik.cpp  3d_RRR_kinematics.cpp  pendulum_dynamics.cpp
